--- a/index.html
+++ b/index.html
@@ -54,6 +54,91 @@
         </script>
 
         <!-- Main -->
+        <main>
+            <div class="hero">
+                <div class="container">
+                    <div class="hero__row row">
+                        <div class="col-5 col-lg-12">
+                            <section class="hero__content">
+                                <a href="#!" class="hero__link"
+                                    >#The Best in Town</a
+                                >
+                                <h1 class="hero__heading">
+                                    Get food
+                                    <img
+                                        src="./assets/icons/pizza.svg"
+                                        alt=""
+                                    />
+                                    delivery and more
+                                    <img
+                                        src="./assets/icons/hamburger.svg"
+                                        alt=""
+                                    />
+                                </h1>
+                                <p class="hero__desc">
+                                    You want it. We get it. Food, drinks,
+                                    groceries, and more available for delivery
+                                    and pickup.
+                                </p>
+
+                                <form action="" class="form">
+                                    <div class="form-input">
+                                        <div class="form__row">
+                                            <img
+                                                class="form-input__icon"
+                                                src="./assets/icons/location.svg"
+                                                alt=""
+                                            />
+                                            <input
+                                                type="text"
+                                                name=""
+                                                id=""
+                                                class="form__input"
+                                                placeholder="Location or zip code"
+                                            />
+                                        </div>
+
+                                        <button
+                                            class="btn btn--primary form__btn"
+                                        >
+                                            Explore
+                                        </button>
+                                    </div>
+                                </form>
+
+                                <div class="link-down">
+                                    <span class="link-down__text">
+                                        Get the app:
+                                    </span>
+                                    <div class="link-down__icon">
+                                        <img
+                                            src="./assets/icons/apple.svg"
+                                            alt=""
+                                        />
+                                    </div>
+                                    <div class="link-down__icon">
+                                        <img
+                                            src="./assets/icons/roboto.svg"
+                                            alt=""
+                                        />
+                                    </div>
+                                </div>
+                            </section>
+                        </div>
+
+                        <div class="hero__media col-7 col-lg-12">
+                            <div class="hero__img">
+                                <img
+                                    src="./assets/img/showsile.png"
+                                    alt=""
+                                    class="hero__img-thumb"
+                                />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
 
         <!-- Footer -->
         <footer id="footer" class="footer"></footer>
