làm phần sign-in sign-up

--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
                                     and pickup.
                                 </p>
 
-                                <form action="" class="form">
-                                    <div class="form-input">
-                                        <div class="form__row">
+                                <form action="" class="home-form">
+                                    <div class="home-form-input">
+                                        <div class="home-form__row">
                                             <img
-                                                class="form-input__icon"
+                                                class="home-form-input__icon"
                                                 src="./assets/icons/location.svg"
                                                 alt=""
                                             />
@@ -94,13 +94,13 @@
                                                 type="text"
                                                 name=""
                                                 id=""
-                                                class="form__input"
+                                                class="home-form__input"
                                                 placeholder="Location or zip code"
                                             />
                                         </div>
 
                                         <button
-                                            class="btn btn--primary form__btn"
+                                            class="btn btn--primary home-form__btn"
                                         >
                                             Explore
                                         </button>
