--- a/404.html
+++ b/404.html
@@ -57,7 +57,7 @@
             <div class="co-soon__info">
                 <div class="co-soon__thumb">
                     <img
-                        src="./assets/img/update/404.png"
+                        src="./assets/img/common/404.png"
                         alt=""
                         class="co-soon__img"
                     />
@@ -67,11 +67,7 @@
                     think something is broken, report a porblem
                 </p>
 
-                <a href="/" class="go-to-home">
-                    <button class="btn btn--primary go-to-home__btn">
-                        Go To Home
-                    </button>
-                </a>
+                <a href="/" class="go-to-home btn btn--primary"> Go To Home </a>
             </div>
         </div>
     </body>
