làm trang about

--- a/index.html
+++ b/index.html
@@ -245,26 +245,26 @@
             </div>
 
             <!-- About -->
-            <div class="about">
+            <div class="food">
                 <div class="container">
-                    <div class="about-inner row">
+                    <div class="food-inner row">
                         <div class="col-6 col-lg-12">
-                            <div class="about-media">
+                            <div class="food-media">
                                 <img
-                                    class="about-media__img"
+                                    class="food-media__img"
                                     src="./assets/img/home-page/about.png"
                                     alt=""
                                 />
                             </div>
                         </div>
                         <div class="col-5 offset-1 col-lg-12 offset-lg-0">
-                            <div class="about-content">
+                            <div class="food-content">
                                 <h2
-                                    class="section__heading about-content__heading"
+                                    class="section__heading food-content__heading"
                                 >
                                     About Foodeats
                                 </h2>
-                                <p class="section__desc about-content__desc">
+                                <p class="section__desc food-content__desc">
                                     Foodeats helps you find and order food from
                                     wherever you are. How it works: you type in
                                     an address, we tell you the restaurants that
@@ -278,7 +278,7 @@
                                 </p>
                                 <a
                                     href="#!"
-                                    class="btn btn--primary about-content__link"
+                                    class="btn btn--primary food-content__link"
                                     >Learn More</a
                                 >
                             </div>
@@ -359,9 +359,9 @@
 
             <div class="feature-bottom">
                 <div class="container">
-                    <div class="feed-inner about-inner row">
+                    <div class="feed-inner food-inner row">
                         <div class="col-5 col-lg-12">
-                            <div class="feed-content about-content">
+                            <div class="feed-content food-content">
                                 <h2
                                     class="section__heading feed-content__heading"
                                 >
@@ -395,9 +395,9 @@
                         </div>
 
                         <div class="col-6 offset-1 col-lg-12 offset-lg-0">
-                            <div class="about-media">
+                            <div class="food-media">
                                 <img
-                                    class="about-media__img"
+                                    class="food-media__img"
                                     src="./assets/img/home-page/feature-bottom-feed.png"
                                     alt=""
                                 />
