--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                         <div class="hero__media col-7 col-lg-12">
                             <div class="hero__img">
                                 <img
-                                    src="./assets/img/showsile.png"
+                                    src="./assets/img/sliedshow/slideshow.png"
                                     alt=""
                                     class="hero__img-thumb"
                                 />
